--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
 }
 
 #heading{
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: darkgreen;
+    background-color: orangered;
 }
 
 .select-parameter-container{
@@ -59,6 +62,7 @@
     background-color: cyan;
     color: black;
     width: 150px;
+    text-align: center;
 }
 
 #input-box{
